completed design of About page

--- a/options.html
+++ b/options.html
@@ -90,23 +90,25 @@
             </label>
           </div>
          </section>
-        </div>
-        <div class="content">
-            <button>Save</button>
-            <button>Discard Changes</button>
-            <button>Reset to default</button>
+        <button>Save</button>
+        <button>Discard Changes</button>
+        <button>Reset to default</button>
         </div>
       </div>
       <div id="about" class="" style="display: block;">
         <header>
-          <h1>Examples</h1>
+          <h1>About</h1>
         </header>
         <div class="content">
-          <section>
-            <h3>Better History</h3>
-            <p>Chrome extension that provides a better interface to your browsing history.</p>
-            <a href="https://chrome.google.com/webstore/detail/obciceimmggglbmelaidpjlmodcebijb">View in Chrome Webstore</a>
-          </section>
+            <h3>Version</h3>
+            <section>
+                <p>You have ExpandURL Version 0.1</p>
+            </section>
+            <h3>Developer</h3>
+            <section>
+                <p>This application was created by <a href="http://muya.co.ke" target="_blank">Fred Muya</a> and released under the The MIT License (MIT)</p>
+                <p>View project on <a href="https://github.com/muya/expand-url" target="_blank">GitHub</a></p>
+            </section>
         </div>
       </div>
     </div>
