--- a/options.html
+++ b/options.html
@@ -1,59 +1,9 @@
-<html lang="en"><head>
+<html lang="en">
+<head>
   <meta charset="utf-8">
   <title>Chrome Bootstrap</title>
   <link rel="stylesheet" type="text/css" href="modules/chrome-bootstrap/chrome-bootstrap.css">
-  <script src="//cdnjs.cloudflare.com/ajax/libs/zepto/1.0/zepto.min.js" type="text/javascript"></script>
-  <script>
-    $(function() {
-      $('.menu a').click(function(ev) {
-        ev.preventDefault();
-        var selected = 'selected';
-
-        $('.mainview > *').removeClass(selected);
-        $('.menu li').removeClass(selected);
-        setTimeout(function() {
-          $('.mainview > *:not(.selected)').css('display', 'none');
-        }, 100);
-
-        $(ev.currentTarget).parent().addClass(selected);
-        var currentView = $($(ev.currentTarget).attr('href'));
-        currentView.css('display', 'block');
-        setTimeout(function() {
-          currentView.addClass(selected);
-        }, 0);
-
-        setTimeout(function() {
-          $('body')[0].scrollTop = 0;
-        }, 200);
-      });
-
-      $('#launch_modal').click(function(ev) {
-        ev.preventDefault();
-        var modal = $('.overlay').clone();
-        $(modal).removeAttr('style');
-        $(modal).find('button, .close-button').click(function() {
-          $(modal).addClass('transparent');
-          setTimeout(function() {
-            $(modal).remove();
-          }, 1000);
-        });
-
-        $(modal).click(function() {
-          $(modal).find('.page').addClass('pulse');
-          $(modal).find('.page').on('webkitAnimationEnd', function() {
-            $(this).removeClass('pulse');
-          });
-        });
-        $(modal).find('.page').click(function(ev) {
-          ev.stopPropagation();
-        });
-        $('body').append(modal);
-      });
-
-      $('.mainview > *:not(.selected)').css('display', 'none');
-    });
-  </script>
-<script>window["_GOOG_TRANS_EXT_VER"] = "1";</script><script>window["_GOOG_TRANS_EXT_VER"] = "1";</script><script>window["_GOOG_TRANS_EXT_VER"] = "1";</script><script>window["_GOOG_TRANS_EXT_VER"] = "1";</script><script>window["_GOOG_TRANS_EXT_VER"] = "1";</script><script>window["_GOOG_TRANS_EXT_VER"] = "1";</script><script>window["_GOOG_TRANS_EXT_VER"] = "1";</script></head>
+</head>
 <body class="chrome-bootstrap">
   <div class="frame">
     <div class="navigation">
@@ -79,20 +29,20 @@
         <section>
           <div class="radio">
             <label>
-              <input type="radio" name="openExpandedUrlOptions" value="url_redirect">
+              <input type="radio" name="openExpandedUrlOptions" value="redirect">
               <span>Automatically re-direct to expanded URL</span>
             </label>
           </div>
           <div class="radio">
             <label>
-              <input type="radio" name="openExpandedUrlOptions" value="url_preview">
+              <input type="radio" name="openExpandedUrlOptions" value="preview">
               <span>Preview the expanded URL before redirecting</span>
             </label>
           </div>
          </section>
-        <button>Save</button>
-        <button>Discard Changes</button>
-        <button>Reset to default</button>
+        <button id="saveSettings" disabled>Save</button>
+        <button id="discardSettings" disabled>Discard Changes</button>
+        <button id="resetSettings">Reset to default</button>
         </div>
       </div>
       <div id="about" class="" style="display: block;">
@@ -112,6 +62,9 @@
         </div>
       </div>
     </div>
-  </div>
+</div>
+  <script src="js/zepto.min.js" type="text/javascript"></script>
+  <script src="js/app-config.js" type="text/javascript"></script>
+  <script src="js/options.js" type="text/javascript"></script>
 </body>
 </html>
