completed storing of user settings on chrome storage

--- a/options.html
+++ b/options.html
@@ -40,6 +40,23 @@
             </label>
           </div>
          </section>
+         <div class="overlay" style="display: none;">
+            <div class="page">
+              <h1>Reset settings to default</h1>
+              <div class="close-button"></div>
+              <div class="content-area">
+                Are you sure you want to reset all settings to the default? This action cannot be undone
+              </div>
+              <div class="action-area">
+                <div class="action-area-right">
+                  <div class="button-strip">
+                    <button id="confirmResetReject">No, keep my settings</button>
+                    <button id="confirmResetAccept">Yes, I'm sure</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         <button id="saveSettings" disabled>Save</button>
         <button id="discardSettings" disabled>Discard Changes</button>
         <button id="resetSettings">Reset to default</button>
