--- a/options.html
+++ b/options.html
@@ -3,6 +3,8 @@
   <meta charset="utf-8">
   <title>Chrome Bootstrap</title>
   <link rel="stylesheet" type="text/css" href="modules/chrome-bootstrap/chrome-bootstrap.css">
+  <link rel="stylesheet" type="text/css" href="modules/bootstrap/css/bootstrap-theme.min.css">
+  <link rel="stylesheet" type="text/css" href="modules/bootstrap/css/bootstrap.min.css">
 </head>
 <body class="chrome-bootstrap">
   <div class="frame">
@@ -25,6 +27,7 @@
           <h1>Settings</h1>
         </header>
         <div class="content">
+        <div data-alerts="alerts" id="userAlerts" data-fade="5000"></div>
         <h2>Opening Expanded URLs &nbsp; <small>Choose what happens when you click on Expand URL</small></h2>
         <section>
           <div class="radio">
@@ -80,6 +83,9 @@
       </div>
     </div>
 </div>
+  <script src="js/jquery.min.js" type="text/javascript"></script>
+  <script src="modules/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+  <script src="modules/jquery-bs-alerts/build/jquery.bsAlerts.min.js" type="text/javascript"></script>
   <script src="js/zepto.min.js" type="text/javascript"></script>
   <script src="js/app-config.js" type="text/javascript"></script>
   <script src="js/options.js" type="text/javascript"></script>
