completed handling for 'Preview'
-requests for preview before opening are now being handled correctly

--- a/options.html
+++ b/options.html
@@ -28,7 +28,7 @@
         </header>
         <div class="content">
         <div data-alerts="alerts" id="userAlerts" data-fade="5000"></div>
-        <h2 data-i18n="openingExpandedURLsContentHeader"></h2>
+        <h3 data-i18n="openingExpandedURLsContentHeader"></h3>
         <section>
           <div class="radio">
             <label>
@@ -88,6 +88,7 @@
   <script src="modules/jquery-bs-alerts/build/jquery.bsAlerts.min.js" type="text/javascript"></script>
   <script src="js/zepto.min.js" type="text/javascript"></script>
   <script src="js/app-config.js" type="text/javascript"></script>
+  <script src="js/expand-url-utils.js" type="text/javascript"></script>
   <script src="js/options.js" type="text/javascript"></script>
 </body>
 </html>
