JS minifying & general cleanup
-added minified files for the javascript
-did some clean-up, removing unecessary logs, refining messages, etc
the end is near :-)

--- a/preview.html
+++ b/preview.html
@@ -79,8 +79,9 @@
   <script src="js/jquery.min.js" type="text/javascript"></script>
   <script src="modules/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
   <script src="modules/jquery-bs-alerts/build/jquery.bsAlerts.min.js" type="text/javascript"></script>
-  <script src="js/expand-url-utils.js" type="text/javascript"></script>
-  <script src="js/preview.js" type="text/javascript"></script>
+  <script src="js/app-config.min.js" type="text/javascript"></script>
+  <script src="js/expand-url-utils.min.js" type="text/javascript"></script>
+  <script src="js/preview.min.js" type="text/javascript"></script>
 </body>
 
 </html>
