--- a/options.html
+++ b/options.html
@@ -87,8 +87,8 @@
   <script src="modules/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
   <script src="modules/jquery-bs-alerts/build/jquery.bsAlerts.min.js" type="text/javascript"></script>
   <script src="js/zepto.min.js" type="text/javascript"></script>
-  <script src="js/app-config.js" type="text/javascript"></script>
-  <script src="js/expand-url-utils.js" type="text/javascript"></script>
-  <script src="js/options.js" type="text/javascript"></script>
+  <script src="js/app-config.min.js" type="text/javascript"></script>
+  <script src="js/expand-url-utils.min.js" type="text/javascript"></script>
+  <script src="js/options.min.js" type="text/javascript"></script>
 </body>
 </html>
