--- a/preview.html
+++ b/preview.html
@@ -59,11 +59,11 @@
         <!-- <p class="lead text-center">http://encore254.blogspot.com/dfkadflkadf/dafjaehfad.andafadfdfjblmacoiuefjkdjfa9d8fuadfkj/dafdjaecja/jfadfkjadjfa/ajdfjaldfja/adlfjadfj</p> -->
         <p class="lead text-center" id="resolvedUrl"></p>
         <p class="lead text-center" id="unResolvedUrl" style="display: none">
-          <img src="img/warning-32.png" />Oops! We couldn't expand your URL
+          <img src="img/warning-32.png" /><span id="unResolvedUrlText"></span>
         </p>
         <div class="text-center" id="urlActionButtons">
-          <a type="button" class="btn btn-lg btn-success" id="openExpandedURL" role="button" style="display: none">Open expanded URL</a>
-          <button type="button" class="btn btn-lg btn-danger" id="closePreviewTab">Close</button>
+          <a type="button" class="btn btn-lg btn-success" id="openExpandedURL" role="button" style="display: none" data-i18n="openExpandedURL"></a>
+          <button type="button" class="btn btn-lg btn-danger" id="closePreviewTab" data-i18n="Close"></button>
         </div>
       </div>
     </div>
